# AlgoTradeHub

./: .gitignore  .replit  CCXT_ListofExchange.py  COMMIT_MESSAGE.md  EXCHANGE_INTEGRATION_SUMMARY.md  FEATURES_IMPLEMENTED.md  FRONTEND_README.md  LICENSE  PRIORITY_1_COMPLETION_SUMMARY.md  README.md  app.py  backtest.py  config.yaml  crypto_execution_engine.py  database.py  exchange_manager.py  exchange_operations.py  install_nodejs_guide.md  integration_test_results.py  launch_full_app.py  main.py  main_fixed.py  market_data.py  market_data_manager.py  models.py  organize_project.py  pyproject.toml  quick_start.py  replit.md  requirements.txt  requirements_core.txt  simple_test.py  start_application.py  strategy.py  system_status.py  trading_operations.py
attached_assets/: Pasted-Detailed-Specification-for-an-Algo-Trading-Application-Design-Architecture-and-Feature-Requiremen-1752648170627_1752648170631.txt
frontend/: README.md  SETUP.md  crypto_execution_test_results.json  exchange_test_results.json  package-lock.json  package.json  setup-frontend.bat  setup-frontend.sh  setup.bat  tailwind.config.js
static/: script.js  style.css
templates/: backtest.html  configuration.html  index.html  realtime.html
test/: check_nodejs.py  demo_all_features.py  fix_frontend.py  frontend_complete_setup.py  quick_test.py  run_all_tests.bat  test_all_features.py  test_all_options.py  test_all_systems.py  test_delta.py  test_frontend_setup.py  test_main_menu.py
utils/: config_manager.py  data_fetcher.py  metrics_calculator.py  multi_timeframe.py  risk_manager.py  (+2 more)
(+62 files in other folders)
