[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.14",
    "apscheduler>=3.11.0",
    "asyncio-throttle>=1.0.2",
    "bcrypt>=4.3.0",
    "blinker>=1.9.0",
    "ccxt>=4.4.94",
    "click>=8.2.1",
    "colorama>=0.4.6",
    "cryptography>=45.0.5",
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "kaleido>=1.0.0",
    "markupsafe>=3.0.2",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "psutil>=7.0.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "schedule>=1.2.2",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "six>=1.17.0",
    "statsmodels>=0.14.5",
    "ta>=0.11.0",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "websocket-client>=1.8.0",
    "websockets>=15.0.1",
    "werkzeug>=3.1.3",
    "xlsxwriter>=3.2.5",
    "psycopg2-binary>=2.9.10",
    "flask-migrate>=4.1.0",
]
